--- a/Mafia/Mafia/Views/Home/Index.cshtml
+++ b/Mafia/Mafia/Views/Home/Index.cshtml
@@ -1,8 +1,65 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<style>
+    .loader {
+        margin: auto;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        position: absolute;
+    }
+</style>
+<div id="div_Loader">
+    <img src="https://www.boasnotas.com/img/loading2.gif" width="100px" height="100px" alt="loader" class="loader"/>
+</div>  
+<div class="container-fluid">
+    <div class="container">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    </div>
+    <table class="table table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript">
+    $(function () {
+
+
+
+        $(document).ready(function () {
+            $("#div_Loader").hide();
+        });
+
+        function Show() {
+            $('#div_Loader').show();
+        }
+
+        function Hide() {
+            $('#div_Loader').hide();
+        }
+    });
+
+</script>
+
+
+
+
+
