--- a/Mafia/Mafia/Views/Home/Index.cshtml
+++ b/Mafia/Mafia/Views/Home/Index.cshtml
@@ -16,48 +16,89 @@
 </div>  
 <div class="container-fluid">
     <div class="container">
+        <div class="card">
+            <div class="card-header">
+                Featured
+            </div>
+            <div class="card-body">
+                <form>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label for="inputEmail4">Name</label>
+                            <input type="text" class="form-control" id="inputEmail4" placeholder="Email">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputPassword4">Email</label>
+                            <input type="text" class="form-control" id="inputPassword4" placeholder="Password">
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="inputPassword4">Age</label>
+                            <input type="number" class="form-control" id="inputPassword4" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-4">
+                            <label for="inputState">Designation</label>
+                            <select id="inputState" class="form-control">
+                                <option>Choose...</option>
+                                <option></option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label for="inputState"></label>
+                            <button type="submit" class="btn btn-primary form-control" style="margin-top:8px;">Submit</button>
+                        </div>
+                        </div>
 
+</form>
+                </div>
+            </div>
+            <br />
+            <table class="table table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Designation</th>
+                        <th scope="col">Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Chandan</td>
+                        <td>Email</td>
+                        <td>Age</td>
+                        <td>Designation</td>
+                        <td>Action</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <table class="table table-hover">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-</div>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript">
-    $(function () {
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script type="text/javascript">
+            $(function () {
 
 
 
-        $(document).ready(function () {
-            $("#div_Loader").hide();
-        });
+                $(document).ready(function () {
+                    $("#div_Loader").hide();
+                });
 
-        function Show() {
-            $('#div_Loader').show();
-        }
+                function Show() {
+                    $('#div_Loader').show();
+                }
 
-        function Hide() {
-            $('#div_Loader').hide();
-        }
-    });
+                function Hide() {
+                    $('#div_Loader').hide();
+                }
+            });
 
-</script>
+        </script>
 
 
 
