--- a/Mafia/Mafia/Views/Home/Index.cshtml
+++ b/Mafia/Mafia/Views/Home/Index.cshtml
@@ -11,9 +11,11 @@
         position: absolute;
     }
 </style>
+
+
 <div id="div_Loader">
-    <img src="https://www.boasnotas.com/img/loading2.gif" width="100px" height="100px" alt="loader" class="loader"/>
-</div>  
+    <img src="https://www.boasnotas.com/img/loading2.gif" width="100px" height="100px" alt="loader" class="loader" />
+</div>
 <div class="container-fluid">
     <div class="container">
         <div class="card">
@@ -43,113 +45,130 @@
                         </div>
                     </div>
                     <div class="form-row">
-                        
+
                         <div class="form-group col-md-2">
                             <label for="inputState"></label>
-                            <button type="submit"  class="btn btn-primary form-control" style="margin-top:8px;">Submit</button>
+                            <button type="submit" class="btn btn-primary form-control" style="margin-top:8px;">Submit</button>
                         </div>
-                        </div>
+                    </div>
 
-</form>
-                </div>
+                </form>
             </div>
-            <br />
-            <table class="table table-hover">
-                <thead class="thead-primary">
-                    <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Age</th>
-                        <th scope="col">Designation</th>
-                        <th scope="col">Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Chandan</td>
-                        <td>Email</td>
-                        <td>Age</td>
-                        <td>Designation</td>
-                        <td>Action</td>
-                    </tr>
-                </tbody>
-            </table>
         </div>
+        <br />
+        <table id="example" class="table table-striped table-bordered">
+            <thead class="thead-primary">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Age</th>
+                    <th scope="col">Designation</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
     </div>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-        <script type="text/javascript">
-            $(function () {
+</div>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap4.min.js"></script>
+<script type="text/javascript">
+    jQuery(document).ready(function ($) {
+        $(function () {
+            $('#example').DataTable({});
 
-                $('#employee-form').on('submit', function (e) {
-                    e.preventDefault();
-                    var postData = {
-                        "name": $("#name").val(),
-                        "email": $("#email").val(),
-                        "age": $("#age").val(),
-                        "designation": $("#designation").val()
-                    }
-                    swal({
-                        title: 'Do you want to Save ?',
-                        showCancelButton: true,
-                        showConfirmButton: true,
-                        confirmButtonText: 'Yes',
-                        cancelButtonText: 'No',
-                        confirmButtonClass: 'btn btn-primary',
-                        cancelButtonClass: 'btn btn-danger',
-                        icon: 'warning',
-                        buttonsStyling: true,
-                        buttons: true,
-                        buttons: ["No", "Yes"]
-                    }).then(function (yes) {
-                        if (yes) {
-                            $.ajax({
-                                type: "POST",
-                                url: '/api/test/employeeInsert',
-                                contentType: 'application/json',
-                                data: JSON.stringify(postData),
-                                beforeSend: function () {
-                                    Show();
-                                },
-                                success: function (response) {
-                                    console.log(response);
-                                    Hide();
-                                    swal("Message", "Data Saved Successfully!", "success");
-                                },
-                                error: function() {
-                                    swal("Message", "Something went wrong!", "error");
-                                }
-                            });
-                        }
-                    });
-                });
-                
-                $.ajax({
-                    type: 'GET',
-                    url: '/api/test/Designation',
-                    dataType: 'JSON',
-                    success: function (data) {
-                        console.log(data);
-                        // remove previously loaded options
-                        for (i in data) {
-                        $('#designation').append('<option value = ' + data[i].id + '>' + data[i].name + '</option>');
-                        }
-                    }
-                });
-
-                $(document).ready(function () {
-                    $("#div_Loader").hide();
-                });
-
-                function Show() {
-                    $('#div_Loader').show();
+            $('#employee-form').on('submit', function (e) {
+                e.preventDefault();
+                var postData = {
+                    "name": $("#name").val(),
+                    "email": $("#email").val(),
+                    "age": $("#age").val(),
+                    "designation": $("#designation").val()
                 }
+                swal({
+                    title: 'Do you want to Save ?',
+                    showCancelButton: true,
+                    showConfirmButton: true,
+                    confirmButtonText: 'Yes',
+                    cancelButtonText: 'No',
+                    confirmButtonClass: 'btn btn-primary',
+                    cancelButtonClass: 'btn btn-danger',
+                    icon: 'warning',
+                    buttonsStyling: true,
+                    buttons: true,
+                    buttons: ["No", "Yes"]
+                }).then(function (yes) {
+                    if (yes) {
+                        $.ajax({
+                            type: "POST",
+                            url: '/api/test/employeeInsert',
+                            contentType: 'application/json',
+                            data: JSON.stringify(postData),
+                            beforeSend: function () {
+                                Show();
+                            },
+                            success: function (response) {
+                                console.log(response);
+                                Hide();
+                                $('#example').DataTable().destroy();
+                                $('#example tbody').html(response);
+                                $('#example').DataTable({
 
-                function Hide() {
-                    $('#div_Loader').hide();
+                                });
+                                swal("Message", "Data Saved Successfully!", "success");
+                            },
+                            error: function () {
+                                swal("Message", "Something went wrong!", "error");
+                            }
+                        });
+                    }
+                });
+            });
+
+            $.ajax({
+                type: 'GET',
+                url: '/api/test/Designation',
+                dataType: 'JSON',
+                success: function (data) {
+                    console.log(data);
+                    // remove previously loaded options
+                    for (i in data) {
+                        $('#designation').append('<option value = ' + data[i].id + '>' + data[i].name + '</option>');
+                    }
                 }
             });
 
-        </script>
+            $.ajax({
+                type: 'GET',
+                url: '/api/test',
+                dataType: 'JSON',
+                success: function (data) {
+                    console.log(data);
+                    // remove previously loaded options
+                    $('#example').DataTable().destroy();
+                    //$('#example tbody').html(data);
+                    $('#example').DataTable({
+                        data: data,
+                        columns: [
+                            { "data": data.name, data.age},
+                        ]
+                    });
+                }
+            });
+
+            $(document).ready(function () {
+                $("#div_Loader").hide();
+            });
+
+            function Show() {
+                $('#div_Loader').show();
+            }
+
+            function Hide() {
+                $('#div_Loader').hide();
+            }
+        });
+    });
+</script>
